--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="options" >
       <ul>
         <li>
-          Ayarları Taşıyın:
+          All Positions:
           <select onchange="">
             <option value="top">top</option>
             <option value="top-left">top-left</option>
@@ -35,9 +35,9 @@
           </select>
         </li>
       </ul>
-      Çıktı(GeoJSON):<br />
+      Export(GeoJSON):<br />
       <textarea id="info" style="width:25em; height:10em"></textarea>
-      <button id="indir" >Çıktı Al</button>
+      <button id="indir" >Export</button>
     </div>
     <script type="module" src="/index.js"></script>
   </body>
